# jesssullivan.github.io

./: .bazelignore  .bazelrc  .bazelrc.flywheel  .envrc  .gitignore  .gitleaks.toml  .npmrc  .prettierignore  AGENTS.md  BUILD.bazel  CHANGELOG.md  Containerfile.node  Dockerfile.shadow  Justfile  LICENSE  MODULE.bazel  README.md  THIRD-PARTY-LICENSES.md  cliff.toml  eslint.config.js  eslint.config.ts  giscus.json  inventory.json  justfile.flywheel  lighthouserc.json  nginx.conf.shadow  package-lock.json  package.json  playwright.bazel.config.ts  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts  vitest.bazel.config.ts  vitest.config.ts
.github/: blog-sources.json  external-posts.json  pages-manifest-exclude.json
.github/workflows/: auto-merge-scheduled.yml  blog-post-bot.yml  build-cv.yml  ci.yml  cloudflare-cache-purge.yml  cloudflare-dns-drift.yml  cloudflare-pages-shadow.yml  collect-posts.yml  content-stats.yml  deploy-pages.yml  notify-blog-template.yml  pages-manifest.yml  production-health.yml  shadow-image.yml  shadow-preview.yml  validate-blog-dates.yml
.greptile/: config.json
config/: substrate-boundary-allowlist.json
cv/: jess_cv_2025.md  jess_sullivan_cv.tex  jess_sullivan_resume.tex
docs/: bigscreen-beyond-edid-proof-packet-2026-04-25.md  blog-authoring-linear-investigation-2026-04-17.md  blog-editorial-taxonomy-2026-07-03.md  blog-node-shadow.md  blog-shadow-preview.md  blog-staging.md  build-metrics.md  content-federation-truth-reconciliation-2026-07-14.md  dns-architecture.md  in-house-reference.md  package-authority-audit-2026-04-16.md  public-surface-productionization-initiative-2026-04-16.md  shared-bazel-package-rollout-matrix-2026-04-16.md  site-pipeline-architecture.md  tinyland-pulse-auth-device-authority-2026-05-03.md  tinyland-pulse-broker-mutation-api-2026-05-03.md  tinyland-pulse-client-home-decision-2026-05-03.md  tinyland-pulse-durable-client-ci-shadow-2026-05-03.md  tinyland-pulse-lifecycle-architecture-spec-2026-04-27.md  tinyland-pulse-m2-client-contract-2026-04-28.md  tinyland-pulse-media-object-lifecycle-2026-05-03.md  tinyland-pulse-public-data-policy-2026-04-27.md  tinyland-static-post-pulse-ingest-2026-05-10.md  tinyvectors-extraction-registry-deep-dive-2026-04-16.md  tinyvectors-source-of-truth-recommendation-2026-04-16.md  tinyvectors-standalone-hardening-blueprint-2026-04-16.md
docs/design/: observatory-ledger-design-of-record-2026-07-15.html  reader-ia-study-2026-07-03.html
docs/plans/: 2026-07-07-blog-operating-priorities.md
docs/runbooks/: apex-cf-pages-cutover.md  dns-cutover-and-rollback.md
e2e/: aag-page.spec.ts  about-merged.spec.ts  banner-fonts.spec.ts  blog.spec.ts  card-enhancement.spec.ts  comments.spec.ts  cv.spec.ts  dark-mode.spec.ts  feeds-and-seo.spec.ts  glass-effects.spec.ts  homepage.spec.ts  ligature-fonts.spec.ts  making-page.spec.ts  media-recovery.spec.ts  music-page.spec.ts  navigation.spec.ts  photography-page.spec.ts  profile-sidebar.spec.ts  prose-overflow.spec.ts  pulse-brokered-stream.spec.ts  pulse-client.spec.ts  pulse-lab.spec.ts  redirects.spec.ts  search.spec.ts  sidebar-scroll.spec.ts  signal-boosts-page.spec.ts  sprint2-features.spec.ts  visual-qa.spec.ts  week4-features.spec.ts  week9-features.spec.ts
functions/: [[path]].ts
functions/blog/: ssh-macos-kvm-hid-accessory-approval.js
infra/cloudflare/: zone.json
scripts/: add-feature-images.mjs  add-feature-images.mts  assign-categories.mjs  assign-categories.mts  audit-links.mjs  audit-links.mts  audit-media.mjs  audit-media.mts  bazel-cache-backed.sh  build-pages-manifest.mts  cache-attachment-contract.sh  cf-dns-check.mts  check-bazel-graph-hygiene.sh  check-production-health.mts  check-public-blog-hydration.mts  chromium-fontconfig.mjs  cleanup-fused-placeholders.mjs  cleanup-fused-placeholders.mts  cleanup-placeholders.mjs  cleanup-placeholders.mts  collect-external-posts.mjs  collect-external-posts.mts  convert-code-blocks.mjs  convert-code-blocks.mts  cv-pdf-validation.test.mts  download-birdphoto-images.mjs  download-birdphoto-images.mts  download-wp-images.mjs  fix-alt-text.mjs  fix-entities-in-fences.mjs  fix-entities-in-fences.mts  generate-activity-stream.mts  generate-blog-stats.mjs  generate-blog-stats.mts  generate-directory-index-aliases.mts  generate-favicon-kit.mts  generate-git-pulse.mts  generate-mock-outbox.mts  generate-photo-gallery.mjs  generate-photo-gallery.mts  (+56 more)
scripts/data/: mock-outbox.json
scripts/hooks/: pre-commit
scripts/lib/: frontmatter.mjs  frontmatter.mts  types.mts
src/: app.css  app.d.ts  app.html
src/lib/: app-csp.test.ts  feed-utils.ts  pagefind.test.ts  pagefind.ts  posts.test.ts  posts.ts  search.ts  theme.svelte.ts  tinyland-post-snapshot.test.ts  types.test.ts  types.ts
src/posts/: 2016-12-13-example-photo-work.md  2016-12-13-required-custom-tools.md  2016-12-13-the-audeasy-build.md  2016-12-13-waxwing-audio.md  2016-12-14-opportunistic-birding-14122016.md  2016-12-15-beta-how-to-build-the-phone-charger.md  2016-12-15-building-electrostatic-earspeakers.md  2016-12-15-diy-electrostatic-amp-options.md  2016-12-15-music-sketches-1-playing-with-rhythm-division-and-jazzy-chords.md  2016-12-16-music-sketches-2-rethinking-funtwos-guitar-tone-discipline.md  2016-12-21-develop-limitless-habitual-soithen_soicould_-ethos.md  2017-01-22-the-canon-takes-its-shape.md  2017-02-20-wolf-pine-fox-park-1-bonus-winter-birds.md  2017-03-02-wolf-pine-fox-park-2-22717.md  2017-03-04-wolf-pine-fox-park-3-3317-noon-ish-time.md  2017-03-05-wolf-pine-fox-park-4-3517-noon-ish-time.md  2017-03-11-wolf-pine-fox-park-6-31017-theoretical-owls-and-real-tree-bark.md  2017-03-12-wolf-pine-fox-park-7-31217-surprise-its-cold.md  2017-03-13-sit-spot-n-1-the-gho-talk.md  2017-03-20-boutique-everything-when-the-hobby-grows-up.md  (+162 more)
static/: CNAME  _routes.json  blog-publication-holds.json  blog-stats.json  browserconfig.xml  pages-manifest.json  photo-gallery.json  redirect-map.json  robots.txt  site.webmanifest
static/cv/: BUILD.bazel  assert_pdfs_synced.mjs  build-flow.mmd
(+245 files in other folders)
