"""Root Bazel targets for jesssullivan.github.io."""

load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_test")
load("@jesssullivan_github_io_npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

filegroup(
    name = "vitest_srcs",
    srcs = glob(
        [
            "src/**/*.ts",
            "src/**/*.svelte",
            "src/**/*.json",
            "src/**/*.html",
            "scripts/**/*.mts",
            "scripts/**/*.mjs",
            "src/posts/**/*.md",
            "static/data/**",
        ],
        allow_empty = True,
    ) + [
        ".npmrc",
        "package-lock.json",
        "package.json",
        "pnpm-lock.yaml",
        "pnpm-workspace.yaml",
        "svelte.config.js",
        "tsconfig.json",
        "vite.config.ts",
        "vitest.bazel.config.ts",
        "vitest.config.ts",
        "//packages/pulse-client:srcs",
        "//packages/pulse-core:srcs",
    ],
)

filegroup(
    name = "blog_agent_test_srcs",
    srcs = ["//packages/blog-agent:srcs"],
)

filegroup(
    name = "workspace_package_check_srcs",
    srcs = [
        "package-lock.json",
        "package.json",
        "pnpm-lock.yaml",
        "pnpm-workspace.yaml",
        "//packages/blog-agent:srcs",
        "//packages/pulse-client:srcs",
        "//packages/pulse-core:srcs",
    ],
)

filegroup(
    name = "browser_smoke_srcs",
    srcs = [
        "package.json",
        "scripts/chromium-fontconfig.mjs",
        "scripts/run-playwright-chromium-bazel.mjs",
        "scripts/run-puppeteer-chromium-bazel.mjs",
    ],
)

filegroup(
    name = "playwright_e2e_srcs",
    srcs = glob(
        [
            "e2e/**",
        ],
        allow_empty = True,
    ) + [
        "playwright.bazel.config.ts",
    ],
)

filegroup(
    name = "sveltekit_build_srcs",
    srcs = glob(
        [
            "packages/**",
            "scripts/**",
            "src/**",
            "static/**",
        ],
        allow_empty = True,
    ) + [
        ".npmrc",
        "package-lock.json",
        "package.json",
        "pnpm-lock.yaml",
        "pnpm-workspace.yaml",
        "svelte.config.js",
        "tsconfig.json",
        "vite.config.ts",
        "//packages/blog-agent:srcs",
        "//packages/pulse-client:srcs",
        "//packages/pulse-core:srcs",
    ],
)

js_binary(
    name = "vitest_bazel",
    data = [
        ":node_modules",
        "scripts/run-vitest-bazel.mjs",
    ],
    entry_point = "scripts/run-vitest-bazel.mjs",
)

js_test(
    name = "vitest_unit_tests",
    copy_data_to_bin = False,
    data = [
        ":node_modules",
        ":vitest_srcs",
        "//packages/pulse-client:node_modules",
        "//packages/pulse-core:node_modules",
    ],
    entry_point = "scripts/run-vitest-bazel.mjs",
    patch_node_fs = False,
    tags = [
        "gloriousflywheel-rbe-candidate",
        "sveltekit",
        "vite",
        "vitest",
    ],
    timeout = "moderate",
    visibility = ["//visibility:public"],
)

js_test(
    name = "blog_agent_node_tests",
    copy_data_to_bin = False,
    data = [
        ":blog_agent_test_srcs",
        ":node_modules",
        "//packages/blog-agent:node_modules",
        "scripts/run-blog-agent-tests-bazel.mjs",
    ],
    entry_point = "scripts/run-blog-agent-tests-bazel.mjs",
    patch_node_fs = False,
    tags = [
        "blog-agent",
        "gloriousflywheel-rbe-candidate",
        "node-test",
    ],
    timeout = "moderate",
    visibility = ["//visibility:public"],
)

js_test(
    name = "workspace_package_checks",
    copy_data_to_bin = False,
    data = [
        ":node_modules",
        ":workspace_package_check_srcs",
        "//packages/blog-agent:node_modules",
        "//packages/pulse-client:node_modules",
        "//packages/pulse-core:node_modules",
        "scripts/run-package-checks-bazel.mjs",
    ],
    entry_point = "scripts/run-package-checks-bazel.mjs",
    patch_node_fs = False,
    tags = [
        "gloriousflywheel-rbe-candidate",
        "node-test",
        "package-check",
        "typescript",
    ],
    timeout = "moderate",
    visibility = ["//visibility:public"],
)

alias(
    name = "types_unit_tests",
    actual = ":vitest_unit_tests",
    visibility = ["//visibility:public"],
)

js_test(
    name = "sveltekit_check",
    copy_data_to_bin = False,
    data = [
        ":node_modules",
        ":sveltekit_build_srcs",
        "scripts/run-sveltekit-check-bazel.mjs",
    ],
    entry_point = "scripts/run-sveltekit-check-bazel.mjs",
    patch_node_fs = False,
    tags = [
        "gloriousflywheel-rbe-candidate",
        "sveltekit",
        "svelte-check",
        "vite",
        "web-check-runtime-authority",
    ],
    timeout = "long",
    visibility = ["//visibility:public"],
)

js_test(
    name = "sveltekit_vite_build_smoke",
    copy_data_to_bin = False,
    data = [
        ":node_modules",
        ":sveltekit_build_srcs",
    ],
    entry_point = "scripts/run-sveltekit-vite-build-bazel.mjs",
    patch_node_fs = False,
    tags = [
        "gloriousflywheel-rbe-candidate",
        "sveltekit",
        "vite",
        "web-build-runtime-authority",
    ],
    timeout = "long",
    visibility = ["//visibility:public"],
)

js_test(
    name = "playwright_chromium_smoke",
    copy_data_to_bin = False,
    data = [
        ":browser_smoke_srcs",
        ":node_modules",
    ],
    entry_point = "scripts/run-playwright-chromium-bazel.mjs",
    patch_node_fs = False,
    tags = [
        "chromium",
        "gloriousflywheel-rbe-candidate",
        "playwright",
        "sveltekit",
        "vite",
        "web-browser-runtime-authority",
    ],
    timeout = "moderate",
    visibility = ["//visibility:public"],
)

js_test(
    name = "playwright_chromium_e2e",
    copy_data_to_bin = False,
    data = [
        ":node_modules",
        ":playwright_e2e_srcs",
        ":sveltekit_build_srcs",
        "scripts/run-playwright-e2e-bazel.mjs",
        "scripts/serve-static-build.mjs",
    ],
    entry_point = "scripts/run-playwright-e2e-bazel.mjs",
    patch_node_fs = False,
    tags = [
        "chromium",
        "e2e",
        "gloriousflywheel-rbe-candidate",
        "playwright",
        "sveltekit",
        "vite",
        "web-browser-runtime-authority",
    ],
    timeout = "long",
    visibility = ["//visibility:public"],
)

js_test(
    name = "puppeteer_chromium_smoke",
    copy_data_to_bin = False,
    data = [
        ":browser_smoke_srcs",
        ":node_modules",
    ],
    entry_point = "scripts/run-puppeteer-chromium-bazel.mjs",
    patch_node_fs = False,
    tags = [
        "chromium",
        "gloriousflywheel-rbe-candidate",
        "puppeteer",
        "sveltekit",
        "vite",
        "web-browser-runtime-authority",
    ],
    timeout = "moderate",
    visibility = ["//visibility:public"],
)

sh_test(
    name = "bazel_graph_hygiene",
    srcs = ["scripts/check-bazel-graph-hygiene.sh"],
    data = [".bazelignore"],
    visibility = ["//visibility:public"],
)

sh_test(
    name = "bazel_cache_backed_contract",
    srcs = ["scripts/test-bazel-cache-backed.sh"],
    data = [
        ".bazelrc",
        ".github/workflows/ci.yml",
        "scripts/bazel-cache-backed.sh",
        "scripts/cache-attachment-contract.sh",
    ],
    visibility = ["//visibility:public"],
)

sh_test(
    name = "shadow_preview_digest_contract",
    srcs = ["scripts/test-shadow-preview-digest-contract.sh"],
    data = [".github/workflows/shadow-preview.yml"],
    visibility = ["//visibility:public"],
)

sh_test(
    name = "cloudflare_cache_purge_contract",
    srcs = ["scripts/test-cloudflare-cache-purge-contract.sh"],
    data = [".github/workflows/cloudflare-cache-purge.yml"],
    visibility = ["//visibility:public"],
)

js_test(
    name = "held_post_edge_404_contract",
    copy_data_to_bin = False,
    data = [
        ".github/workflows/cloudflare-pages-shadow.yml",
        "scripts/test-held-post-edge-404.mjs",
        "static/blog-publication-holds.json",
        "static/_routes.json",
    ] + glob(
        ["functions/**"],
        allow_empty = True,
    ),
    entry_point = "scripts/test-held-post-edge-404.mjs",
    patch_node_fs = False,
    tags = [
        "cloudflare-pages",
        "edge-contract",
        "gloriousflywheel-rbe-candidate",
    ],
    visibility = ["//visibility:public"],
)

exports_files(
    [
        "package-lock.json",
        "package.json",
        "playwright.bazel.config.ts",
        "pnpm-lock.yaml",
        "scripts/bazel-cache-backed.sh",
        "scripts/cache-attachment-contract.sh",
        "scripts/check-bazel-graph-hygiene.sh",
        "scripts/chromium-fontconfig.mjs",
        "scripts/gf-reapi-bazel-credential-helper.mjs",
        "scripts/run-package-checks-bazel.mjs",
        "scripts/run-blog-agent-tests-bazel.mjs",
        "scripts/run-playwright-chromium-bazel.mjs",
        "scripts/run-playwright-e2e-bazel.mjs",
        "scripts/run-puppeteer-chromium-bazel.mjs",
        "scripts/run-sveltekit-check-bazel.mjs",
        "scripts/run-sveltekit-vite-build-bazel.mjs",
        "scripts/serve-static-build.mjs",
        "scripts/test-cloudflare-cache-purge-contract.sh",
        "scripts/test-held-post-edge-404.mjs",
        "scripts/test-shadow-preview-digest-contract.sh",
        "scripts/test-bazel-cache-backed.sh",
        "scripts/run-vitest-bazel.mjs",
        "vitest.bazel.config.ts",
    ],
    visibility = ["//visibility:public"],
)
